--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918'
+- GITenberg
 title: 'A Student in Arms: Second Series'
 url: http://www.gutenberg.org/ebooks/14823
